# znet-chat

./: .gitmodules  CMakeLists.txt
client/: CMakeLists.txt
client/include/: app.hpp  chatwidget.h  chatwindow.h  client.h  connectwindow.h  theme.h  userlistwidget.h  wrappedlistitemdelegate.h
client/src/: app.cpp  chatwidget.cpp  chatwindow.cpp  client.cpp  connectwindow.cpp  main.cpp  userlistwidget.cpp  wrappedlistitemdelegate.cpp
common/: packets.h
server/: CMakeLists.txt
server/include/: chat_server.h  user.h
server/src/: chat_server.cpp  user.cpp
